# vdebug

./: .gitignore  ENVIRONMENT.md  LICENSE  README.md  TEACHING_GUIDE_BEGINNER.md  TEACHING_GUIDE_SOURCE.md  bug_changelog.md  pyproject.toml  requirements.txt
profiles/: example_stm32f4.yaml
report/: First read me.md  agent_prompt_index.md  architecture_modules_map_new.md  architecture_mvp_simplified.md  architecture_report_new.md  architecture_report_v2_new.md  deep-research-report (2).md
report/agent_module_arch_reports_20260407/: 01_api_module_report.md  02_session_module_report.md  03_board_module_report.md  04_engine_module_report.md  05_devices_module_report.md  06_diagnosis_module_report.md  07_scenario_module_report.md  08_artifacts_module_report.md  SYSTEM_PROMPT_INDEX.md
runtime_sessions/sess-04f3fb75-d142-4001-9bf7-38bfd25ce5ee/: session.json
runtime_sessions/sess-0bbeeb23-3d11-4aa5-843c-cb81f734ed31/: session.json
runtime_sessions/sess-1bd215c8-be06-44f3-834e-3bd9016df6da/: session.json
runtime_sessions/sess-1fb1b48c-165d-4791-8e79-f4b8ff1c643b/: session.json
runtime_sessions/sess-21d6567a-d05a-496d-8f23-7754f4c5f88a/: session.json
runtime_sessions/sess-4aae2b77-691b-49b2-9575-46876a886ac9/: session.json
runtime_sessions/sess-4bdffa95-a543-423b-a878-c21ec840fc2b/: session.json
runtime_sessions/sess-6a569748-48e1-4f17-8af8-602758470249/: session.json
scenarios/: example_i2c_stuck.yaml
scripts/: run.ps1  run.sh
src/lot/: __init__.py  (+2 more)
tests/: support.py  test_api.py  test_board_service.py  test_devices.py  test_engine.py  test_scenario.py
(+62 files in other folders)
